--- a/achievements.html
+++ b/achievements.html
@@ -384,18 +384,26 @@
     <div class="content">
         <section id="achievements">
             <h2>Our Achievements</h2>
-            <div class="achievement" id="achievement-1" data-image="https://miro.medium.com/v2/resize:fit:4800/format:webp/1*r2BRNJLH0BPAgZBSCRgfSA.jpeg" data-title="Rising Stars: Remarkable Play at the AP 10th Sub-Junior Basketball Finals 2025" data-description="The 10th AP Sub-Junior Inter District Basketball Championship, held at PES Public School grounds, Chittoor (AP) from May 15th-18th, 2025, saw our boys deliver an outstanding campaign. In a thrilling final, they narrowly fell to East Godavari with a score of 35–38. Despite the close loss, their remarkable play and unwavering determination throughout the game earned them significant recognition and respect from everyone involved in the competition.">
-                <img src="https://miro.medium.com/v2/resize:fit:4800/format:webp/1*r2BRNJLH0BPAgZBSCRgfSA.jpeg" alt="2025 Sub-Junior Championship Runner-Up">
+            <div class="achievement" id="achievement-1" data-image="https://miro.medium.com/v2/resize:fit:4800/format:webp/1*jYWmcXXcoJNSgZwSuKRJ5w.jpeg" data-title="Ananthapuramu Triumphs at 2025 U23 3x3 Inter District Championship" data-description="In a thrilling display of skill and teamwork, the Ananthapuramu District Basketball Association’s U23 team clinched the championship title at the 2025 U23 3x3 Inter District Basketball Championship, held from June 2-6, 2025, at the Indira Gandhi Municipal Stadium in Vijayawada, Andhra Pradesh. Facing off against a formidable Chittoor team in the final, Ananthapuramu secured a hard-fought victory with a score of 21-18. The fast-paced 3x3 format highlighted our players’ agility, precision, and determination, earning them the coveted cup and widespread acclaim.">
+                <img src="https://miro.medium.com/v2/resize:fit:4800/format:webp/1*jYWmcXXcoJNSgZwSuKRJ5w.jpeg" alt="Ananthapuramu Triumphs at 2025 U23 3x3 Inter District Championship">
                 <div class="achievement-content">
                     <div class="achievement-id">ID: achievement-1</div>
+                    <h3> Ananthapuramu Triumphs at 2025 U23 3x3 Inter District Championship</h3>
+                    <p> In a thrilling display of skill and teamwork, the Ananthapuramu District Basketball Association’s U23 team clinched the championship title at the 2025 U23 3x3 Inter District Basketball Championship, held from June 2-6, 2025, at the Indira Gandhi Municipal Stadium in Vijayawada, Andhra Pradesh. Facing off against a formidable Chittoor team in the final, Ananthapuramu secured a hard-fought victory with a score of 21-18. The fast-paced 3x3 format highlighted our players’ agility, precision, and determination, earning them the coveted cup and widespread acclaim.</p>
+                </div>
+            </div>
+           <div class="achievement" id="achievement-1" data-image="https://miro.medium.com/v2/resize:fit:4800/format:webp/1*r2BRNJLH0BPAgZBSCRgfSA.jpeg" data-title="Rising Stars: Remarkable Play at the AP 10th Sub-Junior Basketball Finals 2025" data-description="The 10th AP Sub-Junior Inter District Basketball Championship, held at PES Public School grounds, Chittoor (AP) from May 15th-18th, 2025, saw our boys deliver an outstanding campaign. In a thrilling final, they narrowly fell to East Godavari with a score of 35–38. Despite the close loss, their remarkable play and unwavering determination throughout the game earned them significant recognition and respect from everyone involved in the competition.">
+                <img src="https://miro.medium.com/v2/resize:fit:4800/format:webp/1*r2BRNJLH0BPAgZBSCRgfSA.jpeg" alt="2025 Sub-Junior Championship Runner-Up">
+                <div class="achievement-content">
+                    <div class="achievement-id">ID: achievement-2</div>
                     <h3>Rising Stars: Remarkable Play at the AP 10th Sub-Junior Basketball Finals 2025</h3>
                     <p>The 10th AP Sub-Junior Inter District Basketball Championship, held at PES Public School grounds, Chittoor (AP) from May 15th-18th, 2025, saw our boys deliver an outstanding campaign. In a thrilling final, they narrowly fell to East Godavari with a score of 35–38. Despite the close loss, their remarkable play and unwavering determination throughout the game earned them significant recognition and respect from everyone involved in the competition.</p>
                 </div>
             </div>
-            <div class="achievement" id="achievement-2" data-image="https://cdn-images-1.medium.com/max/800/1*86UdliKFCG_YnLIA8n2IyQ.jpeg" data-title="2025 Basketball Summer Coaching Camp" data-description="" data-video="">
+          <div class="achievement" id="achievement-2" data-image="https://cdn-images-1.medium.com/max/800/1*86UdliKFCG_YnLIA8n2IyQ.jpeg" data-title="2025 Basketball Summer Coaching Camp" data-description="" data-video="">
                 <img src="https://cdn-images-1.medium.com/max/800/1*86UdliKFCG_YnLIA8n2IyQ.jpeg" alt="2025 Basketball Summer Coaching Camp">
                 <div class="achievement-content">
-                    <div class="achievement-id">ID: achievement-2</div>
+                    <div class="achievement-id">ID: achievement-3</div>
                     <h3>2025 Basketball Summer Coaching Camp</h3>
                     <p>Ananthapuramu, [1st May 2025] - The Ananthapuramu District Basketball Association (ADBA) is thrilled to announce its comprehensive Summer Basketball Coaching Camp for 2025, designed to nurture young talent and promote the sport across the district. This highly anticipated camp will be conducted across multiple key locations, ensuring accessibility and top-notch training facilities for aspiring basketball players.
 The camp aims to provide expert coaching in fundamental skills, advanced techniques, game strategies, and physical conditioning. Participants will benefit from specialized drills, scrimmages, and personalized attention from experienced coaches, all aimed at enhancing their basketball prowess and fostering a love for the game.
@@ -413,7 +421,7 @@ Details regarding registration, camp dates, and timings for each location availa
             <div class="achievement" id="achievement-3" data-image="https://miro.medium.com/v2/resize:fit:4800/format:webp/1*__hP41MDD6Lt24Eg2AULgg.jpeg" data-title="ADBA have given a hand-off to young boys in Basketball local tournament" data-description="">
                 <img src="https://miro.medium.com/v2/resize:fit:4800/format:webp/1*__hP41MDD6Lt24Eg2AULgg.jpeg" alt="ADBA have given a hand-off to young boys in Basketball local tournament">
                 <div class="achievement-content">
-                    <div class="achievement-id">ID: achievement-3</div>
+                    <div class="achievement-id">ID: achievement-4</div>
                     <h3> ADBA have given a hand-off to young boys in Basketball local tournament</h3>
                     <p>To prepare for the 10th AP Sub-Junior Inter District Basketball Championship (May 15-18, 2025, Chittoor), ADBA hosted a local tournament at the Indoor Stadium, Anantapur, in early May 2025. This event ignited enthusiasm and competitive spirit among our young athletes, contributing to their remarkable runner-up finish in Chittoor. Below are glimpses of the local tournament, showcasing our boys’ talent and determination.</p>
                 </div>
